# sqlx-rqlite-m233

./: Cargo.toml
crates/rqlite-rs/: Cargo.toml
examples/: simple.rs
src/: error.rs
