[package]
name = "sqlx-rqlite"
#documentation = "https://docs.rs/sqlx"
description = "rqlite driver implementation for SQLx. intended for use with sqlx; see the `sqlx` crate for details."
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
keywords = ["sqlx", "rqlite"]
categories = ["database"]

[workspace]
members = [ "crates/rqlite-rs" ]


[features]
default = [ ] # you need to explicitly specify the chrono feature when compiling simple_chrono example

#any = ["sqlx-core/any"]
#json = ["sqlx-core/json", "serde"]
#offline = ["sqlx-core/offline", "serde"]
#migrate = ["sqlx-core/migrate"]

chrono = ["dep:chrono" , "rqlite-ha421/chrono"]
#regexp = ["dep:regex"]

[dependencies]
futures-core = { version = "0.3", default-features = false }
futures-channel = { version = "0.3", default-features = false, features = ["sink", "alloc", "std"] }
# used by the SQLite worker thread to block on the async mutex that locks the database handle
futures-executor = { version = "0.3" }
futures-intrusive = "0.5"
futures-util = { version = "0.3", default-features = false, features = ["alloc", "sink"] }

chrono = { version = "0.4" , optional = true }
#time = { workspace = true, optional = true }
#uuid = { workspace = true, optional = true }

url = { version = "2.5", default-features = false }
percent-encoding = "2.3"

flume = { version = "0.11", default-features = false, features = ["async"] }

atoi = "2.0"

log = "0.4"
tracing = { version = "0.1", features = ["log"] }

serde = { version = "1.0", features = ["derive"], optional = true }
regex = { version = "1.10", optional = true }
urlencoding = "2.1"

[dependencies.rqlite-ha421]
default-features = false
path = "crates/rqlite-rs"
version = "0.1.2"

[dependencies.sqlx-core]
version = "0.7"

[[example]]
name = "simple"

[[example]]
name = "simple_chrono"
required-features = ["chrono"]

[dev-dependencies]
sqlx = {  version = "0.7" , default-features = false, features = ["macros", "runtime-tokio", "tls-none"] }
tokio = { version = "1", features = [ "full" ] }

